[gd_scene load_steps=5 format=3 uid="uid://c2q6x3xnvtvqh"]

[ext_resource type="FontFile" uid="uid://dj8l8uk81jfik" path="res://fonts/MediumFont.tres" id="1_ayrui"]
[ext_resource type="Script" path="res://Assorted_Scenes/SaveFiles.gd" id="1_phdc5"]
[ext_resource type="PackedScene" uid="uid://dm80pcxu7kvcx" path="res://Universal_Scenes/UI/Button.tscn" id="2_plcfh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fvei"]
bg_color = Color(0.0500001, 0, 0.6, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.878431, 0.996078, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phdc5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.00784314, 0.0901961, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -229.0
offset_right = 502.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="SaveFile1" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile1"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 1 "

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile1"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile1/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile1/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile1/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile1/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile1/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile1/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"

[node name="SaveFile2" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile2"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 2"

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile2"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile2/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile2/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile2/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile2/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile2/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile2/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"

[node name="SaveFile3" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile3"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 3"

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile3"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile3/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile3/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile3/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile3/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile3/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile3/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"

[node name="SaveFile4" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile4"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 4"

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile4"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile4/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile4/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile4/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile4/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile4/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile4/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"

[node name="SaveFile5" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile5"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 5"

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile5"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile5/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile5/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile5"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile5/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile5/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile5/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile5/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"

[node name="SaveFile6" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fvei")

[node name="Label" type="Label" parent="GridContainer/SaveFile6"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Save File 6"

[node name="SaveFileInfo" type="VBoxContainer" parent="GridContainer/SaveFile6"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 190.0
theme_override_constants/separation = 0

[node name="PlayTime" type="Label" parent="GridContainer/SaveFile6/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "00:00:00:00"

[node name="CurrentLevel" type="Label" parent="GridContainer/SaveFile6/SaveFileInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ayrui")
theme_override_font_sizes/font_size = 35
text = "Training"

[node name="SaveFileOptions" type="VBoxContainer" parent="GridContainer/SaveFile6"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Start" parent="GridContainer/SaveFile6/SaveFileOptions" groups=["Start Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Start"

[node name="Duplicate" parent="GridContainer/SaveFile6/SaveFileOptions" groups=["Duplicate Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Duplicate"

[node name="Delete" parent="GridContainer/SaveFile6/SaveFileOptions" groups=["Delete Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Delete"

[node name="Save" parent="GridContainer/SaveFile6/SaveFileOptions" groups=["Save Buttons"] instance=ExtResource("2_plcfh")]
layout_mode = 2
text = "Save"
